--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,7 @@
+#content {
+    text-align: center;
+}
+
 .mdl-layout__drawer {
     width: 300px;
     left: -150px;
@@ -38,12 +42,12 @@
 }
 
 .mdl-layout__drawer-button:hover {
-    background-color: #4E342E !important;
+    background-color: #6D4C41 !important;
 }
 
 .mdl-layout__drawer-button:focus,
 .mdl-layout__drawer-button:hover:focus {
-    background-color: #3E2723 !important;
+    background-color: #5D4037 !important;
 }
 
 .mdl-layout__drawer-button:active, .mdl-layout__drawer-button:focus {
@@ -71,65 +75,10 @@
     font-weight: bold;
 }
 
-.view {
-    margin: 10px;
-    float: left;
-    border: 10px solid #fff;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-    box-shadow: 1px 1px 2px #e6e6e6;
-    cursor: default;
+.mdl-mini-footer {
+    flex: 0 0 auto;
 }
 
-.view .mask,
-.view .content {
-    width: 300px;
-    height: 200px;
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    left: 0
-}
-
-.view img {
-    display: block;
-    position: relative
-}
-
-.view h2 {
-    text-transform: uppercase;
-    color: #fff;
-    text-align: center;
-    position: relative;
-    font-size: 17px;
-    font-family: Raleway, serif;
-    padding: 10px;
-    /*background: rgba(0, 0, 0, 0.8);*/
-    margin: 20px 0 0 0
-}
-
-.view p {
-    font-family: Merriweather, serif;
-    font-style: italic;
-    font-size: 14px;
-    position: relative;
-    color: #fff;
-    padding: 0 20px 0;
-    text-align: center
-}
-
-.view a.info {
-    display: inline-block;
-    text-decoration: none;
-    padding: 7px 14px;
-    background: #000;
-    color: #fff;
-    font-family: Raleway, serif;
-    text-transform: uppercase;
-    box-shadow: 0 0 1px #000
-}
-
-.view a.info:hover {
-    box-shadow: 0 0 5px #000
+.mdl-mini-footer .mdl-logo {
+    line-height: initial !important;
 }
