--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 
 .view {
     width: auto;
-    margin: 0 33px;
+    margin: 0;
     display: inline-block;=
     float: left;
     border: 10px solid #fff;
