--- a/css/topic.css
+++ b/css/topic.css
@@ -1,3 +1,8 @@
+/**
+ * October 3, 2019
+ * Copyright, Mikhail K., 2019
+ */
+
 .table_of_contents {
     border: 2px darkgrey solid;
     background-color: lightgrey;
@@ -7,21 +12,21 @@
     margin: 10px auto;
 }
 
-.table_of_contents a {
+.table_of_contents ul li a {
     cursor: pointer;
     color: black;
     text-decoration: underline;
 }
 
-.table_of_contents a:hover {
+.table_of_contents ul li a:hover {
     color: blue;
 }
 
-.table_of_contents a:visited {
+.table_of_contents ul li a:visited {
     color: black;
 }
 
-.table_of_contents a:active {
+.table_of_contents ul li a:active {
     cursor: pointer;
     color: darkblue;
 }
