--- a/css/topic.css
+++ b/css/topic.css
@@ -52,3 +52,10 @@
     font-size: 16px;
     text-align: left;
 }
+
+.img-label {
+    font-size: 14px;
+    font-style: italic;
+    color: darkgray;
+    margin-bottom: 5px;
+}
