--- a/css/topic.css
+++ b/css/topic.css
@@ -50,14 +50,6 @@
     height: auto;
 }
 
-.chapter iframe {
-    max-width: 80%;
-    width: 550px;
-    height: 320px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .chapter p {
     margin-left: 10%;
     margin-right: 10%;
@@ -70,4 +62,22 @@
     font-style: italic;
     color: darkgray;
     margin-bottom: 5px;
+}
+
+.video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+    max-width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
