--- a/css/common.css
+++ b/css/common.css
@@ -43,6 +43,7 @@
     margin-top: 10px;
     margin-bottom: 2px;
     margin-left: 8px;
+    cursor: pointer;
 }
 
 .mdl-layout-drawer-title-area .mdl-layout-title {
