Другой способ выделения подкатегорий

--- a/css/common.css
+++ b/css/common.css
@@ -78,8 +78,16 @@
 }
 
 .mdl-layout__drawer-navigation-subcategory {
-    margin-top: 5px;
-    margin-left: 40px;
+    color: black !important;
+    cursor: unset !important;
+    font-weight: lighter;
+    margin-top: 10px !important;
+    padding-top: 2px !important;
+    padding-bottom: 2px !important;
+}
+
+.mdl-layout__drawer-navigation-subcategory:hover {
+    background-color: unset !important;
 }
 
 .mdl-layout__drawer .mdl-layout__drawer-navigation-subcategory .mdl-navigation__link {
