Улучшение дизайна навигатора

--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,10 @@
  * October 3, 2019
  * Copyright, Mikhail K., 2019
  */
+.mdl-navigation {
+    margin-top: 5px;
+}
+
 .mdl-layout__drawer.is-visible~.mdl-layout__content.mdl-layout__content {
     overflow-y: unset !important;
 }
