--- a/css/topic.css
+++ b/css/topic.css
@@ -69,7 +69,7 @@
     height: auto;
 }
 
-#topic_content li, #topic_content > p {
+.chapter li, #topic_content > p {
     margin-left: 5%;
     margin-right: 5%;
     text-align: left;
