--- a/css/topic.css
+++ b/css/topic.css
@@ -33,6 +33,10 @@
 
 #table_of_contents ul li a {
     cursor: pointer;
+}
+
+#table_of_contents ul li a:hover {
+    cursor: pointer;
     text-decoration: underline;
 }
 
@@ -40,7 +44,7 @@
     color: blue;
 }
 
-#table_of_contents ul li a:hover, #century-navigation a:hover {
+#table_of_contents ul li a:hover {
     color: mediumblue;
 }
 
