--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,17 @@
     transition: all 0.2s ease-in-out;
 }
 
+@media only screen and (max-width: 992px) {
+    .view .mask {
+        opacity: 1 !important;
+    }
+
+    .view h2, .view p, .view a.info {
+        opacity: 1 !important;
+        transform: translateY(0px);
+    }
+}
+
 .view:hover img {
     transform: scale(1.1);
 }
