--- a/css/common.css
+++ b/css/common.css
@@ -10,6 +10,10 @@
     overflow-y: unset !important;
 }
 
+.mdl-layout__drawer.is-visible {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
 .mdl-layout__header {
     position: fixed;
 }
