--- a/css/common.css
+++ b/css/common.css
@@ -7,7 +7,7 @@
     margin-top: -12px;
 }
 
-.material-icons {
+.mdl-navigation__link .material-icons {
     vertical-align: bottom;
     margin-right: 5px;
     margin-top: 4px;
