--- a/css/common.css
+++ b/css/common.css
@@ -7,11 +7,16 @@
     margin-top: -12px;
 }
 
+.mdl-navigation__link {
+    color: black !important;
+}
+
 .mdl-navigation__link .material-icons {
     vertical-align: bottom;
     margin-right: 5px;
     margin-top: 4px;
     margin-bottom: 1px;
+    color: #757575;
 }
 
 .mdl-layout__drawer.is-visible~.mdl-layout__content.mdl-layout__content {
@@ -102,6 +107,7 @@
     margin-top: 15px !important;
     padding-top: 2px !important;
     padding-bottom: 2px !important;
+    font-weight: bold;
 }
 
 .mdl-layout__drawer-navigation-subcategory:hover {
@@ -117,7 +123,6 @@
 }
 
 .mdl-navigation-current-topic {
-    font-weight: bold;
     background-color: #cfcece;
 }
 
