--- a/css/topic.css
+++ b/css/topic.css
@@ -31,28 +31,39 @@
     font-size: 15px;
 }
 
-#table_of_contents ul li a {
+#table_of_contents ul li, .piece a {
     cursor: pointer;
 }
 
-#table_of_contents ul li a:hover {
+#table_of_contents ul li, .piece a:hover {
     text-decoration: underline;
 }
 
-#table_of_contents ul li a, #century-navigation a {
+#table_of_contents ul li a, #century-navigation, .piece a {
     color: blue;
 }
 
-#table_of_contents ul li a:hover {
+#table_of_contents ul li, .piece a:hover {
     color: mediumblue;
 }
 
-#table_of_contents ul li a:visited, #century-navigation a:visited {
+#table_of_contents ul li a:visited, #century-navigation, .piece a:visited {
     color: darkblue;
 }
 
-#table_of_contents ul li a:active, #century-navigation a:active {
+#table_of_contents ul li a:active, #century-navigation, .piece a:active {
     color: darkblue;
+}
+
+.piece {
+    margin: 5px auto 5px auto;
+    padding: 10px;
+    width: 90%;
+    height: auto;
+    max-height: 300px;
+    overflow: auto;
+    border: 2px lightgrey solid;
+    box-shadow: 5px 4px 5px rgba(0,0,0,0.5);
 }
 
 .content {
