--- a/css/common.css
+++ b/css/common.css
@@ -34,6 +34,8 @@
 
 .mdl-layout__drawer.is-visible {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    background-color: rgba(250, 250, 250, 0.75);
+    backdrop-filter: saturate(105%) blur(20px);
 }
 
 .mdl-layout__header {
