--- a/css/topic.css
+++ b/css/topic.css
@@ -62,6 +62,13 @@
     overflow: auto;
     border: 2px lightgrey solid;
     box-shadow: 5px 4px 5px rgba(0,0,0,0.5);
+    background-color: whitesmoke;
+}
+
+.piece > p {
+    font-family: "Times New Roman", Times, serif;
+    font-size: 20px !important;
+    font-style: oblique;
 }
 
 .content {
