Лишние стили и сломанные подкатегории

--- a/css/common.css
+++ b/css/common.css
@@ -141,15 +141,9 @@
     cursor: pointer;
 }
 
-.mdl-navigation__link:hover {
+.mdl-navigation__link:not(.mdl-layout__drawer-navigation-subcategory):hover {
     cursor: pointer;
     background-color: rgba(224, 224, 224, 0.75) !important;
-}
-
-.mdl-navigation__link:focus,
-.mdl-navigation__link:focus:hover,
-.mdl-navigation__link:focus:active {
-    background-color: rgba(200, 200, 200, 0.75);
 }
 
 .mdl-navigation-current-topic {
