--- a/css/common.css
+++ b/css/common.css
@@ -2,15 +2,6 @@
  * October 3, 2019
  * Copyright, Mikhail K., 2019
  */
-.mdl-layout__obfuscator.is-visible {
-    backdrop-filter: saturate(105%) blur(5px);
-}
-
-.mdl-layout__header.is-casting-shadow {
-    background-color: rgba(121, 85, 72, 0.85);
-    backdrop-filter: saturate(110%) blur(15px);
-}
-
 .mdl-navigation {
     padding-top: unset !important;
     margin-top: -12px;
@@ -34,8 +25,6 @@
 
 .mdl-layout__drawer.is-visible {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    background-color: rgba(250, 250, 250, 0.75);
-    backdrop-filter: saturate(105%) blur(20px);
 }
 
 .mdl-layout__header {
@@ -94,17 +83,13 @@
     -webkit-user-select: none;
 }
 
-.mdl-layout__drawer-button {
-    background-color: unset !important;
-}
-
 .mdl-layout__drawer-button:hover {
-    background-color: rgba(109, 76, 65, 0.75) !important;
+    background-color: #6D4C41 !important;
 }
 
 .mdl-layout__drawer-button:focus,
 .mdl-layout__drawer-button:hover:focus {
-    background-color: rgba(93, 64, 55, 0.75) !important;
+    background-color: #5D4037 !important;
 }
 
 .mdl-layout__drawer-button:active, .mdl-layout__drawer-button:focus {
@@ -129,21 +114,12 @@
     background-color: unset !important;
 }
 
-.mdl-navigation {
-    transition: all 1s ease-out;
-}
-
 .mdl-navigation__link {
     cursor: pointer;
 }
 
-.mdl-navigation__link:not(.mdl-layout__drawer-navigation-subcategory):hover {
-    cursor: pointer;
-    background-color: rgba(224, 224, 224, 0.75) !important;
-}
-
 .mdl-navigation-current-topic {
-    background-color: rgba(206, 206, 206, 0.75);
+    background-color: #cfcece;
 }
 
 .mdl-mini-footer .mdl-logo {
