--- a/css/topic.css
+++ b/css/topic.css
@@ -54,19 +54,22 @@
 }
 
 .piece {
-    margin: 5px auto 5px auto;
-    padding: 10px;
+    margin: 5px auto 20px;
     width: 90%;
-    height: auto;
-    max-height: 300px;
     overflow: auto;
     border: 2px lightgrey solid;
     box-shadow: 5px 4px 5px rgba(0,0,0,0.5);
     background-color: whitesmoke;
 }
 
-.piece > .poems {
-    font-family: "Times New Roman", Times, serif;
+.poem-piece {
+    padding: 20px 10px 10px;
+    height: auto;
+    max-height: 300px;
+}
+
+.poem-piece > .poems {
+    font-family: 'Times New Roman', Times, serif;
     font-size: 20px !important;
     font-style: oblique;
 }
@@ -113,10 +116,19 @@
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
+}
+
+.chapter > .injection {
     max-width: 90%;
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 10px;
+}
+
+.piece > .injection {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .injection iframe {
@@ -125,4 +137,19 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.spoiler-header {
+    text-align: left;
+    padding: 10px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.spoiler-header-inactive:before {
+    content: '⯈ ';
+}
+
+.spoiler-header-active:before {
+    content: '⯆ ';
 }
