Теперь футер нормально приклеен к концу страницы

--- a/css/common.css
+++ b/css/common.css
@@ -145,3 +145,10 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #b7b7b7;
 }
+
+.mdl-layout__content {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+}
